--- a/index.html
+++ b/index.html
@@ -17,36 +17,50 @@
 </head>
 
 <body>
-
-    <header>
-        <nav>
-            <div class="tituloPrincipal">
-                <h1 style="color: rgb(194, 35, 62)">MiniStyle</h1>
-            </div>
-     <!--menu de navegacion-->
-            <div class="menuNavegacion">
-             <ul >
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./pages/baby-girls.html">Baby Girls</a> </li>
-                <li><a href="./pages/baby-boys.html">Baby boys</a> </li>
-                <li><a href="./pages/nosotros.html">Nosotros</a> </li>
-                <li><a href="./pages/contactos.html">Contacto</a> </li>
-             </ul>
+    <div class="container-fluid">
+     <header class="row">
+        <h1 class="text-center col-12 titulo-pagina">Ministyle</h1>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./index.html">Home</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./pages/baby-girls.html">Baby girls</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link active"
+                            href="./pages/baby-boys.html">Baby boys</a>                                
+                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="./pages/contactos.html">Contacto</a>
+                            </li>
+                        </li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./pages/nosotros.html">Nosotros</a>
+                        </li>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
-     </header>
+      </header>
+    </div>
     <!--cuerpo con imagenes-->
     <main>
         <div class="cointenerPrincipal">
-           <h2>Home</h2>
-
             <fieldset>
                 <div class="promocionOff">
                  <h3>Promociones</h3>
                     <div class="imagine">
                         <div>
-                            <img class="primerOferta" src="./img/pexels-lisa-fotios-2565272.jpg" alt="Oferta body ">
-                            <button>comprar</button>
+                        <img class="primerOferta" src="./img/pexels-lisa-fotios-2565272.jpg" alt="Oferta body ">
+                        <button>comprar</button>
                         </div>
                         <img class="segundaOferta" src="./img/pexels-carolyn-jones-3552358.jpg" alt="Oferta vestido">
                         <img class="tercerOferta" src="./img/pexels-pixabay-267278.jpg" alt="Oferta Zapatilla">
@@ -74,11 +88,15 @@
     <footer class="piePagina">
         <div class="referenciaFinal">
             <li>Ayuda</li>
-            <li>Whatsapp</li>
+            <li><a href="https://www.whatsapp.com/">Whatsapp</a></li>
             <li><a href="https://www.instagram.com/" > Instagram</a></li>
         </div>
 
         <h6>Todos los derechos reservados</h6>
     </footer>
+    <!-- JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
 </html>
