--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img  src="./img/pexels-heyday-photism-834507.jpg" class="d-block w-100 " alt="...">
+                <img  src="./img/pexels-heyday-photism-834507.jpg" class="d-block w-100 " alt="vestido nena y remera a raya gama azul">
             </div>
             <div class="carousel-item">
-                <img src="./img/pexels-pixabay-101537.jpg" class="d-block w-100" alt="...">
+                <img src="./img/pexels-pixabay-101537.jpg" class="d-block w-100" alt="camisa azul niño">
             </div>
             <div class="carousel-item">
-                <img src="./img/pexels-pixabay-36745.jpg" class="d-block w-100" alt="...">
+                <img src="./img/pexels-pixabay-36745.jpg" class="d-block w-100" alt="sueter gris y sueter rayas verdes">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -83,9 +83,46 @@
         </div>
     </div>
     </main>
-<section>
-
-</section>
+    <section>
+       <div class="container-card">
+            <div class="card" style="width: 18rem;">
+                <img src="./img/vestido niña.png" class="card-img-top" alt="vestido blanco niña">
+                <div class="card-body">
+                    <h2 class="card-title">Vestido</h2>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                        content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="./img/vestido-fantasia.png" class="card-img-top" alt="vestido fantasia niña">
+                <div class="card-body">
+                    <h2 class="card-title">Vestido-fantasia</h2>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                        content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="./img/conjunto-bohemio.png" class="card-img-top" alt="conjunto bohemio niño">
+                <div class="card-body">
+                    <h2 class="card-title">Conjunto-bohemio</h2>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                        content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="./img/vestido-floreado.png" class="card-img-top" alt="vestido floreado niña">
+                <div class="card-body">
+                    <h2 class="card-title">Vestido primavera</h2>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                        content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+       </div>
+    </section>
     <footer class="piePagina">
 
         <div class="referenciaFinal d-flex">
