--- a/pages/baby-boys.html
+++ b/pages/baby-boys.html
@@ -26,17 +26,14 @@
             </div>
         </nav>
     </header>
-
     <main>
           <h2>Baby Boys</h2>
         <div>
-            <img class="remeraAzul" src="../img/pexels-daisy-anderson-5589908.jpg" alt="remera azul niño">
+            <img class="ropa-bohemia" src="../img/conjunto-bohemio.png"   alt="conjunto bohemio">
         </div>
-
         <div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, inventore reprehenderit nam tenetur totam, velit quas reiciendis expedita voluptatum omnis tempore alias aut sit necessitatibus excepturi error id illum ea!</p>
         </div>
-
         <div>
             <ul>
                <li>Caracteristica 1</li>
@@ -46,15 +43,12 @@
                <li>Caracteristica 5</li>
             </ul>
         </div>
-
         <div>
-            <img class="zapatillaNiño" src="../img/pexels-matthias-zomer-233225.jpg" alt="Zapatillas niño">
+            <img class="conjunto-niño" src="../img/niño-ropa.png" alt="conjunto niño">
         </div>
-
         <div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eius excepturi qui id expedita maiores repellat, suscipit eos nulla cum tempora laborum, eveniet officiis, aspernatur repellendus consequuntur nihil magnam esse?<br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam labore quae amet magni id cumque consectetur, <br> laborum praesentium ipsum repellat distinctio et, eveniet mollitia! Eos laboriosam cumque adipisci quos!</p>
         </div>
-
         <div>
             <ul>
                 <li>Envio gratis</li>
@@ -64,11 +58,9 @@
         </div>
     </main>
     <footer>
-
         <li>Ayuda</li>
         <li>Whatsapp</li>
-        <li><a href="https://www.instagram.com/"> Instagram</a></li>
-        
+        <li><a href="https://www.instagram.com/"> Instagram</a><li>        
         <h6>Todos los derechos reservados</h6>
     </footer>   
 </body>
