baby boys responsive-grid

--- a/pages/baby-boys.html
+++ b/pages/baby-boys.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
- <header>
+<div class="contain-bb">
+    <header class="header-bb">
         <nav>
             <div class="tituloPrincipal">
                 <h1 style="color: rgb(55, 37, 156)">MiniStyle</h1>
             </div>
             <!--menu de navegacion-->
-            <div class="menuNavegacion">
+            <div class="menu-navegacion">
                 <ul>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="./baby-girls.html">Baby Girls</a> </li>
@@ -26,42 +27,25 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="main-bb">
+        <div class="container-1">
           <h2>Baby Boys</h2>
-        <div>
-            <img class="ropa-bohemia" src="../img/conjunto-bohemio.png"   alt="conjunto bohemio">
-        </div>
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, inventore reprehenderit nam tenetur totam, velit quas reiciendis expedita voluptatum omnis tempore alias aut sit necessitatibus excepturi error id illum ea!</p>
-        </div>
-        <div>
-            <ul>
-               <li>Caracteristica 1</li>
-               <li>Caracteristica 2</li>
-               <li>Caracteristica 3</li>
-               <li>Caracteristica 4</li>
-               <li>Caracteristica 5</li>
-            </ul>
-        </div>
-        <div>
-            <img class="conjunto-niño" src="../img/niño-ropa.png" alt="conjunto niño">
-        </div>
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eius excepturi qui id expedita maiores repellat, suscipit eos nulla cum tempora laborum, eveniet officiis, aspernatur repellendus consequuntur nihil magnam esse?<br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam labore quae amet magni id cumque consectetur, <br> laborum praesentium ipsum repellat distinctio et, eveniet mollitia! Eos laboriosam cumque adipisci quos!</p>
-        </div>
-        <div>
-            <ul>
-                <li>Envio gratis</li>
-                <li>Cuotas sin interes</li>
-                <li>Pick up</li>
-            </ul>
+          <img class="conjunto-bohemio" src="../img/conjunto-bohemio.png" alt="conjunto bohemio">
+            <p>Lorem ipsum dolor sit amet consectetur <br> error id illum ea!</p>
         </div>
     </main>
-    <footer>
+    <section class="section-bb">
+            <p>Eos laboriosam cumque<br>
+            adipisci quos! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, magni et eaque delectus cupiditate odio incidunt nisi blanditiis consequuntur libero voluptatum esse perspiciatis, sint pariatur ex aliquid eius. Repellendus, dolor.<br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam facilis eveniet, cupiditate non illum illo distinctio ratione nostrum sit maxime impedit voluptates animi deserunt, quis nesciunt reiciendis asperiores magni eos!</p>
+            <img class="conjunto-niño" src="../img/niño-ropa.png" alt="conjunto niño">
+    </section>
+    <footer class="footer-bb">
+        <div>
         <li>Ayuda</li>
         <li>Whatsapp</li>
-        <li><a href="https://www.instagram.com/"> Instagram</a><li>        
-        <h6>Todos los derechos reservados</h6>
-    </footer>   
+        <li><a href="https://www.instagram.com/"> Instagram</a><li>   
+            </div>
+    </footer> 
+</div>
 </body>
 </html>
