--- a/pages/baby-girls.html
+++ b/pages/baby-girls.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/857a53bb70.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/styles.css">
     <title>Baby Girls</title>
 </head>
 <body>
-    <header>
+ <div class="contain"> 
+    <header class="header-bg">
              <nav>
                  <div class="tituloPrincipal">
                         <h1 style="color: rgb(55, 37, 156)">MiniStyle</h1>
@@ -25,40 +27,43 @@
                     </div>
                 </nav>
     </header>
-    <main>
-        <h2>Baby Girls</h2>
-        <div class="conteiner-bg">      
+    <main class="main-bg">
+        <div class="titulo-bg">
+        <h2 class="bg-titulo">Baby Girls</h2>  
+        </div>
             <div class="descripcion-producto">
-                <h3>Vestido blanco</h3>
+                <h3 class="titulo-vestido">Vestido blanco</h3>
                 <img class="vestido-blanco" src="../img//vestido niña.png" alt="vestido blanco">
                 <p class="sacoGris">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, ipsam quo. Sint incidunt hic reprehenderit veritatis ullam a exercitationem doloremque sunt officia facilis quos, in, inventore maiores, nihil illo possimus!. Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Molestiae maxime quisquam voluptatem optio enim dicta praesentium saepe hic vero laudantium nesciunt et, deleniti mollitia quidem eveniet nam, est, labore itaque.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, ipsam quo. Sint incidunt hic reprehenderit veritatis
                 ullam a exercitationem doloremque sunt officia facilis quos, in, inventore maiores, nihil illo possimus!. Lorem ipsum
                 dolor sit amet consectetur adipisicing elit. <br> Molestiae maxime quisquam voluptatem optio enim dicta praesentium
                 saepe hic vero </p> 
             </div>
+    <section class="section-bg">
             <div class="descripcion-producto">
-                <h3>Vestido Fantasia</h3>
+                <h3 class="fantasia-bg">Vestido Fantasia</h3>
               <p class="hijo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ea earum voluptas quaerat exercitationem placeat laborum natus mollitia sapiente alias perspiciatis error, tempore nulla accusamus excepturi. Totam aliquam harum similique! <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quod soluta commodi quia enim neque pariatur hic. Commodi laborum sunt similique sed iste praesentium corporis provident magni dolorum, minima ea!</p>
+            </div>
+            <div>
                 <img class="vestido-fantasia" src="../img/vestido-fantasia.png" alt="vestido fantasia">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi doloribus quo repellat ex. Velit hic officia error sint harum placeat aperiam, alias voluptatem nihil, facilis blanditiis consequuntur veniam voluptatibus illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto nesciunt modi quae quos praesentium, quasi, iste, consectetur nihil repudiandae velit magnam delectus doloremque est provident! Non praesentium rerum a est. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci laboriosam reiciendis voluptatibus voluptatem pariatur distinctio illum est ea nesciunt, molestias delectus voluptates veritatis recusandae obcaecati quod nihil cum facere perferendis!Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi doloribus quo repellat ex. Velit hic officia error sint
-            harum placeat aperiam, alias voluptatem nihil, facilis blanditiis consequuntur veniam voluptatibus illum. Lorem ipsum
-            dolor sit amet consectetur adipisicing elit. Iusto nesciunt modi quae quos praesentium, quasi, iste, consectetur nihil
-            repudiandae velit magnam delectus doloremque est provident! Non praesentium rerum a est. Lorem ipsum, dolor sit amet
-            consectetur adipisicing elit. Adipisci laboriosam reiciendis voluptatibus voluptatem pariatur distinctio illum est ea
-            nesciunt, molestias delectus voluptates veritatis recusandae obcaecati quod nihil cum facere perferendis!</p>
-
+              harum placeat aperiam, alias voluptatem nihil, facilis blanditiis consequuntur veniam voluptatibus illum. Lorem ipsum
+              dolor sit amet consectetur adipisicing elit. Iusto nesciunt   modi quae quos praesentium, quasi, iste, consectetur nihil
+              repudiandae velit magnam delectus doloremque est provident! Non praesentium rerum a est. Lorem ipsum, dolor sit amet
+              consectetur adipisicing elit. Adipisci laboriosam reiciendis   voluptatibus voluptatem pariatur distinctio illum est ea
+               nesciunt, molestias delectus voluptates veritatis recusandae obcaecati quod nihil cum facere perferendis!</p>
             </div>
-        </div>
+    </section>
     </main>
-    <footer>
-    <div>
+    <footer class="footer-bg">
+    <div class="unico-foot">
         <ul>
             <li>Envio gratis</li>
             <li>Cuotas sin interes</li>
             <li>Pick up</li>
         </ul>
     </div>
-    <div>
+    <div class="unico-foot">
         <ul>
         <li><a href="https://es-la.facebook.com/"></a> Facebook</li>
         <li><a href="https://www.whatsapp.com/"></a> Whatsapp</li>
@@ -67,6 +72,7 @@
     </div>   
         <h6>Todos los derechos reservados</h6>
     
-    </footer>    
+    </footer>  
+</div>
 </body>
 </html>
