--- a/pages/baby-girls.html
+++ b/pages/baby-girls.html
@@ -28,9 +28,6 @@
                 </nav>
     </header>
     <main class="main-bg">
-        <div class="titulo-bg">
-        <h2 class="bg-titulo">Baby Girls</h2>  
-        </div>
             <div class="descripcion-producto">
                 <h3 class="titulo-vestido">Vestido blanco</h3>
                 <img class="vestido-blanco" src="../img//vestido niña.png" alt="vestido blanco">
@@ -39,12 +36,14 @@
                 dolor sit amet consectetur adipisicing elit. <br> Molestiae maxime quisquam voluptatem optio enim dicta praesentium
                 saepe hic vero </p> 
             </div>
+
     <section class="section-bg">
             <div class="descripcion-producto">
                 <h3 class="fantasia-bg">Vestido Fantasia</h3>
               <p class="hijo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ea earum voluptas quaerat exercitationem placeat laborum natus mollitia sapiente alias perspiciatis error, tempore nulla accusamus excepturi. Totam aliquam harum similique! <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quod soluta commodi quia enim neque pariatur hic. Commodi laborum sunt similique sed iste praesentium corporis provident magni dolorum, minima ea!</p>
             </div>
-            <div>
+
+            <div class="parrafo">
                 <img class="vestido-fantasia" src="../img/vestido-fantasia.png" alt="vestido fantasia">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi doloribus quo repellat ex. Velit hic officia error sint harum placeat aperiam, alias voluptatem nihil, facilis blanditiis consequuntur veniam voluptatibus illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto nesciunt modi quae quos praesentium, quasi, iste, consectetur nihil repudiandae velit magnam delectus doloremque est provident! Non praesentium rerum a est. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci laboriosam reiciendis voluptatibus voluptatem pariatur distinctio illum est ea nesciunt, molestias delectus voluptates veritatis recusandae obcaecati quod nihil cum facere perferendis!Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi doloribus quo repellat ex. Velit hic officia error sint
               harum placeat aperiam, alias voluptatem nihil, facilis blanditiis consequuntur veniam voluptatibus illum. Lorem ipsum
@@ -70,8 +69,6 @@
         <li><a href="https://www.instagram.com/"> Instagram</a></li>
         </ul>
     </div>   
-        <h6>Todos los derechos reservados</h6>
-    
     </footer>  
 </div>
 </body>
