--- a/pages/baby-boys.html
+++ b/pages/baby-boys.html
@@ -50,18 +50,29 @@
     <main class="main-bb">
         <div class="container-1">
           <h2>Baby Boys</h2>
-          <img class="conjunto-bohemio" src="../img/conjunto-bohemio.png" alt="conjunto bohemio">
-            <p>Lorem ipsum dolor sit amet consectetur <br> error id illum ea!</p>
+          <img class="conjunto-bohemio img-fluid" src="../img/conjunto-bohemio.png" alt="conjunto bohemio">
+            <p class="texto-bb">Lorem ipsum dolor sit amet consectetur <br> error id illum ea! Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse velit, minus iusto, blanditiis nisi expedita nobis provident hic tenetur itaque veritatis fugit voluptate, magni saepe quae eaque quasi in adipisci.Eos laboriosam cumque<br>
+            adipisci quos! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, magni et eaque delectus cupiditate
+            odio incidunt nisi blanditiis consequuntur libero voluptatum esse perspiciatis, sint pariatur ex aliquid eius.
+            Repellendus, dolor.<br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam facilis eveniet, cupiditate non
+            illum illo distinctio ratione nostrum sit maxime impedit voluptates animi deserunt, quis nesciunt reiciendis asperiores
+            magni eos! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas porro voluptates molestiae iure voluptatem delectus nesciunt modi maxime blanditiis sed rerum ipsa earum eius, quod dolores quis mollitia inventore. Praesentium?Lorem ipsum dolor sit amet consectetur adipisicing elit. At deleniti debitis voluptatibus aliquid dicta, repellendus atque, veniam impedit pariatur nemo ut reprehenderit neque accusamus quo voluptate beatae minus exercitationem eligendi?</p>
         </div>
     </main>
     <section class="section-bb">
-            <p>Eos laboriosam cumque<br>
-            adipisci quos! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, magni et eaque delectus cupiditate odio incidunt nisi blanditiis consequuntur libero voluptatum esse perspiciatis, sint pariatur ex aliquid eius. Repellendus, dolor.<br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam facilis eveniet, cupiditate non illum illo distinctio ratione nostrum sit maxime impedit voluptates animi deserunt, quis nesciunt reiciendis asperiores magni eos!</p>
-            <img class="conjunto-niño" src="../img/niño-ropa.png" alt="conjunto niño">
+        <img class="conjunto-niño" src="../img/niño-ropa.png" alt="conjunto niño">
+            <p class="texto-bb">Eos laboriosam cumque<br>
+            adipisci quos! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, magni et eaque delectus cupiditate odio incidunt nisi blanditiis consequuntur libero voluptatum esse perspiciatis, sint pariatur ex aliquid eius. Repellendus, dolor.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam facilis eveniet, cupiditate non illum illo distinctio ratione nostrum sit maxime impedit voluptates animi deserunt, quis nesciunt reiciendis asperiores magni eos!Eos laboriosamLorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam facilis eveniet, cupiditate non
+            illum illo distinctio ratione nostrum sit maxime impedit voluptates animi deserunt, quis nesciunt reiciendis asperiores
+            magni eos! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas porro voluptates molestiae iure voluptatem
+            delectus nesciunt modi maxime blanditiis sed rerum ipsa earum eius, quod dolores quis mollitia inventore.
+            Praesentium?Lorem ipsum dolor sit amet consectetur adipisicing elit. At deleniti debitis voluptatibus aliquid dicta,
+            repellendus atque, veniam impedit pariatur nemo ut reprehenderit neque accusamus quo voluptate beatae minus
+            exercitationem eligendi? </p>
     </section>
-    <footer class="piePagina">
+    <footer class="footer-bb">
         <div class="referenciaFinal d-flex">
-            <div>
+            <div class="envios">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                     class="bi bi-truck icons-footer footer-none" viewBox="0 0 16 16">
                     <path
@@ -69,7 +80,7 @@
                 </svg>
                 <p class="footer-none">ENVIOS</p>
             </div>
-            <div>
+            <div class="cuotas">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                     class="bi bi-currency-dollar icons-footer" viewBox="0 0 16 16">
                     <path
@@ -77,7 +88,7 @@
                 </svg>
                 <p class="text-center">CUOTAS</p>
             </div>
-            <div>
+            <div class="pick-up">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                     class="bi bi-shop icons-footer footer-none" viewBox="0 0 16 16">
                     <path
@@ -85,7 +96,7 @@
                 </svg>
                 <p class="footer-none">PICK UP</p>
             </div>
-            <div>
+            <div class="whatsapp">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                     class="bi bi-whatsapp icons-footer" viewBox="0 0 16 16">
                     <path
@@ -93,7 +104,7 @@
                 </svg>
                 <p>WHATSAPP</p>
             </div>
-            <div>
+            <div class="instagram">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                     class="bi bi-instagram icons-footer" viewBox="0 0 16 16">
                     <path
@@ -101,7 +112,7 @@
                 </svg>
                 <p>INSTAGRAM</p>
             </div>
-            <div>
+            <div class="facebook">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                     class="bi bi-facebook icons-footer" viewBox="0 0 16 16">
                     <path
