--- a/pages/baby-girls.html
+++ b/pages/baby-girls.html
@@ -76,7 +76,7 @@
     </main>
     <footer class="piePagina">
         <div class="referenciaFinal d-flex">
-            <div>
+            <div class="envios">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                     class="bi bi-truck icons-footer footer-none" viewBox="0 0 16 16">
                     <path
@@ -84,7 +84,7 @@
                 </svg>
                 <p class="footer-none">ENVIOS</p>
             </div>
-            <div>
+            <div class="cuotas">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                     class="bi bi-currency-dollar icons-footer" viewBox="0 0 16 16">
                     <path
@@ -92,7 +92,7 @@
                 </svg>
                 <p class="text-center">CUOTAS</p>
             </div>
-            <div>
+            <div class="pick-up">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                     class="bi bi-shop icons-footer footer-none" viewBox="0 0 16 16">
                     <path
@@ -100,7 +100,7 @@
                 </svg>
                 <p class="footer-none">PICK UP</p>
             </div>
-            <div>
+            <div class="whatsapp">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                     class="bi bi-whatsapp icons-footer" viewBox="0 0 16 16">
                     <path
@@ -108,7 +108,7 @@
                 </svg>
                 <p>WHATSAPP</p>
             </div>
-            <div>
+            <div class="instagram">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                     class="bi bi-instagram icons-footer" viewBox="0 0 16 16">
                     <path
@@ -116,7 +116,7 @@
                 </svg>
                 <p>INSTAGRAM</p>
             </div>
-            <div>
+            <div class="facebook">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                     class="bi bi-facebook icons-footer" viewBox="0 0 16 16">
                     <path
