--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -48,26 +48,25 @@
 
 <body>
     <main>       
-            <h2>Nosotros</h2>
-        
-        <div>
+         <h2 class="text-center mt-3">Conocenos</h2>
+        <div class="containerVideo">
             <!--etiqueta para videos-->
-            <iframe width="1280" height="720" src="https://www.youtube.com/embed/YPJwPRTGmyw"
+            <iframe class="col-8" width="1280" height="720" src="https://www.youtube.com/embed/YPJwPRTGmyw"
             title="¿Cómo es la Metodología de Coderhouse? #DemocratizandoLaEducación" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>        
         </div>
 
-        <div>
+        <div class="containerParrafo col-8">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ipsum adipisci, dicta ipsa ea sunt modi nisi. Molestias hic mollitia, quidem obcaecati sint quae atque perferendis accusamus architecto dolorum corporis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. A placeat fuga nostrum maxime vitae in soluta provident, inventore, possimus nulla laborum? Quis quod odit dolorem recusandae ut aspernatur placeat corporis?</p>
         </div>  
         <!--enlace absoluto-->
         <div>
-            <a href="../index.html">ir a la home</a>
+            <a class="enlace" href="../index.html">Volver al home</a>
         </div>
         <footer class="piePagina">
             <div class="referenciaFinal d-flex">
-                <div>
+                <div class="envios">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                         class="bi bi-truck icons-footer footer-none" viewBox="0 0 16 16">
                         <path
@@ -75,7 +74,7 @@
                     </svg>
                     <p class="footer-none">ENVIOS</p>
                 </div>
-                <div>
+                <div class="cuotas">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                         class="bi bi-currency-dollar icons-footer" viewBox="0 0 16 16">
                         <path
@@ -83,7 +82,7 @@
                     </svg>
                     <p class="text-center">CUOTAS</p>
                 </div>
-                <div>
+                <div class="pick-up">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                         class="bi bi-shop icons-footer footer-none" viewBox="0 0 16 16">
                         <path
@@ -91,7 +90,7 @@
                     </svg>
                     <p class="footer-none">PICK UP</p>
                 </div>
-                <div>
+                <div class="whatsapp">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                         class="bi bi-whatsapp icons-footer" viewBox="0 0 16 16">
                         <path
@@ -99,7 +98,7 @@
                     </svg>
                     <p>WHATSAPP</p>
                 </div>
-                <div>
+                <div class="instagram">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                         class="bi bi-instagram icons-footer" viewBox="0 0 16 16">
                         <path
@@ -107,7 +106,7 @@
                     </svg>
                     <p>INSTAGRAM</p>
                 </div>
-                <div>
+                <div class="facebook">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                         class="bi bi-facebook icons-footer" viewBox="0 0 16 16">
                         <path
