seo-keywords-description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--seo-->
+    <meta name="description" content="indumentaria infantil para niños y niñas">
+    <meta name="keywords" content="ropa, infantil, niñas, niños, vestimenta">
     <!--link tipografia-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,13 +58,13 @@
     <div id="carouselExampleControls" class="carousel slide carouse-conteiner" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img  src="./img/pexels-heyday-photism-834507.jpg" class="d-block w-100 " alt="vestido nena y remera a raya gama azul">
+                <img  src="./img/pexels-heyday-photism-834507.png" class="d-block w-100 " alt="vestido nena y remera a raya gama azul">
             </div>
             <div class="carousel-item">
-                <img src="./img/pexels-pixabay-101537.jpg" class="d-block w-100" alt="camisa azul niño">
+                <img src="./img/pexels-pixabay-101537.png" class="d-block w-100" alt="camisa azul niño">
             </div>
             <div class="carousel-item">
-                <img src="./img/pexels-pixabay-36745.jpg" class="d-block w-100" alt="sueter gris y sueter rayas verdes">
+                <img src="./img/pexels-pixabay-36745.png" class="d-block w-100" alt="sueter gris y sueter rayas verdes">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
