--- a/pages/baby-boys.html
+++ b/pages/baby-boys.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--seo-->
+    <meta name="description" content="indumentaria infantil para niños y niñas">
+    <meta name="keywords" content="ropa, infantil, niñas, niños, vestimenta">
     <!-- CSS BT -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -51,24 +54,31 @@
         <div class="container-1">
           <h2>Baby Boys</h2>
           <img class="conjunto-bohemio img-fluid" src="../img/conjunto-bohemio.png" alt="conjunto bohemio">
-            <p class="texto-bb">Lorem ipsum dolor sit amet consectetur <br> error id illum ea! Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse velit, minus iusto, blanditiis nisi expedita nobis provident hic tenetur itaque veritatis fugit voluptate, magni saepe quae eaque quasi in adipisci.Eos laboriosam cumque<br>
-            adipisci quos! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, magni et eaque delectus cupiditate
-            odio incidunt nisi blanditiis consequuntur libero voluptatum esse perspiciatis, sint pariatur ex aliquid eius.
-            Repellendus, dolor.<br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam facilis eveniet, cupiditate non
-            illum illo distinctio ratione nostrum sit maxime impedit voluptates animi deserunt, quis nesciunt reiciendis asperiores
-            magni eos! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas porro voluptates molestiae iure voluptatem delectus nesciunt modi maxime blanditiis sed rerum ipsa earum eius, quod dolores quis mollitia inventore. Praesentium?Lorem ipsum dolor sit amet consectetur adipisicing elit. At deleniti debitis voluptatibus aliquid dicta, repellendus atque, veniam impedit pariatur nemo ut reprehenderit neque accusamus quo voluptate beatae minus exercitationem eligendi?</p>
+            <p class="texto-bb">La moda infantil debe estar llena de diversión, comodidad, creatividad y sobre todo libre de etiquetas, prejuicios y
+            estereotipos. Actualmente muchas marcas de ropa infantil ofrecen variedad de tendencias y estilos que se acomodan más a
+            lo que los niños desean y quieren vestir y que además encajan perfectamente con su personalidad y espíritu aventurero
+            que caracteriza a los niños. <br> La ropa para bebés y niños debe ser casual, contemporánea, con variedad de patrones, diseños, estampados, tejidos,
+            colores y elaboradas con telas prácticas, agradables y cómodas, la vestimenta juega un rol importante en ellos, les
+            permite expresar su identidad, y entenderse, aprenden a tomar elecciones y desarrollar el gusto por vestirse bien y
+            estar pendientes de su cuidado personal, desde muy pequeños deben aprender a escoger la ropa por si mismos, acompañados
+            de la guía de sus padres para que vistan de una forma adecuada tomando en cuenta el clima y las actividades que
+            realizan.</p>
         </div>
     </main>
     <section class="section-bb">
         <img class="conjunto-niño" src="../img/niño-ropa.png" alt="conjunto niño">
-            <p class="texto-bb">Eos laboriosam cumque<br>
-            adipisci quos! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, magni et eaque delectus cupiditate odio incidunt nisi blanditiis consequuntur libero voluptatum esse perspiciatis, sint pariatur ex aliquid eius. Repellendus, dolor.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam facilis eveniet, cupiditate non illum illo distinctio ratione nostrum sit maxime impedit voluptates animi deserunt, quis nesciunt reiciendis asperiores magni eos!Eos laboriosamLorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam facilis eveniet, cupiditate non
-            illum illo distinctio ratione nostrum sit maxime impedit voluptates animi deserunt, quis nesciunt reiciendis asperiores
-            magni eos! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas porro voluptates molestiae iure voluptatem
-            delectus nesciunt modi maxime blanditiis sed rerum ipsa earum eius, quod dolores quis mollitia inventore.
-            Praesentium?Lorem ipsum dolor sit amet consectetur adipisicing elit. At deleniti debitis voluptatibus aliquid dicta,
-            repellendus atque, veniam impedit pariatur nemo ut reprehenderit neque accusamus quo voluptate beatae minus
-            exercitationem eligendi? </p>
+            <p class="texto-bb">Beneficios de usar la vestimenta infantil adecuada<br>
+            Hoy en día existen muchas tendencias en cuanto a la vestimenta infantil. Los padres que están acostumbrados a seguir la
+            moda se aseguran de que sus pequeños puedan lucir la ropa más bonita. Sin embargo, hay que tener mucho cuidado en el
+            momento de comprar la ropa de los peques, ya que es posible que no sea lo suficientemente agradable para que el niño
+            pueda sentirse libre y jugar con mayor comodidad.  
+            Además, la ropa tiene una influencia muy importante en el aprendizaje durante la infancia, ya que el niño suele conocer
+            y relacionar todo lo que se encuentra en su entorno. Al no poder realizar esto con naturalidad es posible que se vea
+            frustrado y al mismo tiempo se limite su capacidad para aprender. Otras áreas en donde la ropa juega un papel importante
+            son las siguientes:
+            En el desarrollo de las habilidades motoras durante el crecimiento.
+            En el proceso de la asimilación de la personalidad y autonomía.
+            En la forma en cómo percibe al mundo y cómo utiliza sus sentidos para ello </p>
     </section>
     <footer class="footer-bb">
         <div class="referenciaFinal d-flex">
