--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -67,7 +67,7 @@
         <div>
             <a class="enlace" href="../index.html">Volver al home</a>
         </div>
-        <footer class="piePagina">
+        <footer class="footer-bb">
             <div class="referenciaFinal d-flex">
                 <div class="envios">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
