--- a/pages/baby-girls.html
+++ b/pages/baby-girls.html
@@ -106,7 +106,7 @@
             </div>
     </section>
     </main>
-    <footer class="piePagina">
+    <footer class="footer-bb">
         <div class="referenciaFinal d-flex">
             <div class="envios">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
