--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -95,7 +95,7 @@
             </div>
 
         </main>
-    <footer class="piePagina">
+    <footer class="footer-bb">
         <div class="referenciaFinal d-flex">
             <div class="envios">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
