--- a/pages/baby-girls.html
+++ b/pages/baby-girls.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/857a53bb70.js" crossorigin="anonymous"></script>
     <!--seo-->
-    <meta name="description" content="indumentaria infantil para niños y niñas">
-    <meta name="keywords" content="ropa, infantil, niñas, niños, vestimenta">
+    <meta name="description" content="indumentaria infantil para  niñas">
+    <meta name="keywords" content="ropa, infantil, niñas, vestimenta">
     <!-- CSS BT -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
