--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -61,7 +61,8 @@
         </div>
 
         <div class="containerParrafo col-8">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ipsum adipisci, dicta ipsa ea sunt modi nisi. Molestias hic mollitia, quidem obcaecati sint quae atque perferendis accusamus architecto dolorum corporis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. A placeat fuga nostrum maxime vitae in soluta provident, inventore, possimus nulla laborum? Quis quod odit dolorem recusandae ut aspernatur placeat corporis?</p>
+            <p>Ministyle es una marca de ropa, calzado, juguetes, accesorios y perfumes para chicos y chicas de 0 a 12 años. Grisino es color, es
+            juego, es risa y diversion.Comprá productos de Indumentaria por internet. Tenemos bebe varon, bebe nena y más. Hacé tu pedido y pagalo online</p>
         </div>  
         <!--enlace absoluto-->
         <div>
