--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="containerParrafo col-8">
-            <p>Ministyle es una marca de ropa, calzado, juguetes, accesorios y perfumes para chicos y chicas de 0 a 12 años. Grisino es color, es
+            <p>Ministyle es una marca de ropa, calzado, juguetes, accesorios y perfumes para chicos y chicas de 0 a 12 años. Ministyle es color, es
             juego, es risa y diversion.Comprá productos de Indumentaria por internet. Tenemos bebe varon, bebe nena y más. Hacé tu pedido y pagalo online</p>
         </div>  
         <!--enlace absoluto-->
