--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -54,10 +54,9 @@
          <h2 class="text-center mt-3">Conocenos</h2>
         <div class="containerVideo">
             <!--etiqueta para videos-->
-            <iframe class="col-8" width="1280" height="720" src="https://www.youtube.com/embed/YPJwPRTGmyw"
-            title="¿Cómo es la Metodología de Coderhouse? #DemocratizandoLaEducación" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>        
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/XaVARS4gVFA" title="YouTube video player"
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
 
         <div class="containerParrafo col-8">
