responsive, paleta, extend, espacios

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     </div>
     <div class="container">
         <div class="buttons">
-            <button class="button-beba"><a href="./pages/baby-girls.html">Baby Girls</a></button>
-            <button class="button-beba"><a href="./pages/baby-boys.html">Baby Boys</a></button>
-            <button class="button-beba"><a href="./pages/contactos.html">Contactanos</a> </button>
+            <button class="button beba"><a href="./pages/baby-girls.html">Baby Girls</a></button>
+            <button class="button beba"><a href="./pages/baby-boys.html">Baby Boys</a></button>
+            <button class="button beba"><a href="./pages/contactos.html">Contactanos</a> </button>
         </div>
     </div>
     </main>
@@ -121,12 +121,12 @@
             </div>
        </div>
     </section>
-<footer >
+<footer class="footer" >
     <div class="social-icons-container">
-        <a href="" class="social-icon"></a>
-        <a href="" class="social-icon"></a>
-        <a href="" class="social-icon"></a>
-        <a href="" class="social-icon"></a>
+        <a href="https://www.instagram.com/" class="social-icon" alt="red social Instagram" ></a>
+        <a href="https://es-la.facebook.com/" class="social-icon" alt="red-social Facebook"></a>
+        <a href="https://twitter.com/" class="social-icon" alt="red social twiter"></a>
+        <a href="https://www.whatsapp.com/" class="social-icon" alt="whatsapp"></a>
     </div>
     <ul class="footer-menu-container">
         <li class="menu-item">Legal</li>
