--- a/pages/baby-girls.html
+++ b/pages/baby-girls.html
@@ -99,12 +99,12 @@
                         </div>
                     </section>
                 </main>
-        <footer class="footer-bb">
+        <footer>
             <div class="social-icons-container">
-                <a href="" class="social-icon"></a>
-                <a href="" class="social-icon"></a>
-                <a href="" class="social-icon"></a>
-                <a href="" class="social-icon"></a>
+                <a href="https://www.instagram.com/" class="social-icon" alt="red social Instagram"></a>
+                <a href="https://es-la.facebook.com/" class="social-icon" alt="red-social Facebook"></a>
+                <a href="https://twitter.com/" class="social-icon" alt="red social twiter"></a>
+                <a href="https://www.whatsapp.com/" class="social-icon" alt="whatsapp"></a>
             </div>
             <ul class="footer-menu-container">
                 <li class="menu-item">Legal</li>
