--- a/pages/baby-boys.html
+++ b/pages/baby-boys.html
@@ -82,12 +82,12 @@
             En el proceso de la asimilación de la personalidad y autonomía.
             En la forma en cómo percibe al mundo y cómo utiliza sus sentidos para ello </p>
     </section>
-            <footer class="footer-bb">
+            <footer>
                 <div class="social-icons-container">
-                    <a href="" class="social-icon"></a>
-                    <a href="" class="social-icon"></a>
-                    <a href="" class="social-icon"></a>
-                    <a href="" class="social-icon"></a>
+                    <a href="https://www.instagram.com/" class="social-icon" alt="red social Instagram"></a>
+                    <a href="https://es-la.facebook.com/" class="social-icon" alt="red-social Facebook"></a>
+                    <a href="https://twitter.com/" class="social-icon" alt="red social twiter"></a>
+                    <a href="https://www.whatsapp.com/" class="social-icon" alt="whatsapp"></a>
                 </div>
                 <ul class="footer-menu-container">
                     <li class="menu-item">Legal</li>
