--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -82,7 +82,7 @@
                             </label>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Contactar</button>
+                    <button type="submit" class=" btn btn-primary">Contactar</button>
                 </fieldset>
             </form>
            </div>
@@ -93,14 +93,14 @@
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
             </div>
-
         </main>
-         <footer>
+        
+        <footer>
             <div class="social-icons-container">
-             <a href="" class="social-icon"></a>
-             <a href="" class="social-icon"></a>
-             <a href="" class="social-icon"></a>
-             <a href="" class="social-icon"></a>
+                <a href="https://www.instagram.com/" class="social-icon" alt="red social Instagram"></a>
+                <a href="https://es-la.facebook.com/" class="social-icon" alt="red-social Facebook"></a>
+                <a href="https://twitter.com/" class="social-icon" alt="red social twiter"></a>
+                <a href="https://www.whatsapp.com/" class="social-icon" alt="whatsapp"></a>
             </div>
             <ul class="footer-menu-container">
                 <li class="menu-item">Legal</li>
@@ -109,7 +109,7 @@
                 <li class="menu-item">Shipping</li>
                 <li class="menu-item">Refounds</li>
             </ul>
-                <span class="copyright">&copy;2022, Ministyle. todos los derechos reservados</span>
+            <span class="copyright">&copy;2022, Ministyle. todos los derechos reservados</span>
         </footer>
         <!-- JavaScript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
