--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -89,22 +89,22 @@
         <div>
             <a class="enlace" href="../index.html">Volver al home</a>
         </div>
-    <footer>
-            <div class="social-icons-container">
-                <a href="" class="social-icon"></a>
-                <a href="" class="social-icon"></a>
-                <a href="" class="social-icon"></a>
-                <a href="" class="social-icon"></a>
-            </div>
-            <ul class="footer-menu-container">
-                <li class="menu-item">Legal</li>
-                <li class="menu-item">Cookies</li>
-                <li class="menu-item">Privacy</li>
-                <li class="menu-item">Shipping</li>
-                <li class="menu-item">Refounds</li>
-            </ul>
-                <span class="copyright">&copy;2022, Ministyle. todos los derechos reservados</span>
-    </footer>
+<footer>
+    <div class="social-icons-container">
+        <a href="https://www.instagram.com/" class="social-icon" alt="red social Instagram"></a>
+        <a href="https://es-la.facebook.com/" class="social-icon" alt="red-social Facebook"></a>
+        <a href="https://twitter.com/" class="social-icon" alt="red social twiter"></a>
+        <a href="https://www.whatsapp.com/" class="social-icon" alt="whatsapp"></a>
+    </div>
+    <ul class="footer-menu-container">
+        <li class="menu-item">Legal</li>
+        <li class="menu-item">Cookies</li>
+        <li class="menu-item">Privacy</li>
+        <li class="menu-item">Shipping</li>
+        <li class="menu-item">Refounds</li>
+    </ul>
+    <span class="copyright">&copy;2022, Ministyle. todos los derechos reservados</span>
+</footer>
         <!-- JavaScript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
